fix: CSS flexbox and missing space

--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -81,7 +81,6 @@
   border-top-right-radius: 1rem;
   border-left: 0;
   text-align: center;
-  display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 12px;
